[package]
name = "boromir"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Gamboa"]
description = "Extract artifacts related with persistence from Windows registry hives"

[dependencies]
clap = { version = "4", features = ["derive"] }
nt_hive2 = "4"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
roxmltree = "0.20"
